css fix: sitemap menu downdown overflow
svn path=/ZMS/branches/zms4/; revision=5177

--- a/Products/zms/plugins/www/zmi.core.css
+++ b/Products/zms/plugins/www/zmi.core.css
@@ -1111,6 +1111,9 @@ table.table-sm tr.row_insert td .btn-add {
 	white-space:nowrap;
 	overflow:hidden;
 }
+.zmi.manage-menu header.navbar {
+	overflow:visible;
+}
 .zmi.manage-menu .zmi-sitemap {
 	margin-top:1em
 }
